tests/bad/forall_positive.ppl
-- See issue #109.

define double = \x. (x, x);
let (f, g) = double (\y. y) in f ()
